--- a/index.html
+++ b/index.html
@@ -110,6 +110,181 @@
             </div>
           </div>
         </section>
+
+        <section class="mb-24">
+          <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+            <div class="flex justify-center items-center overflow-hidden">
+              <div class="w-5/6">
+                <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
+                <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
+              </div>  
+            </div>
+
+            <div class="relative py-24">
+              <div class="absolute z-10 top-44 md:top-52">
+                <div class=" h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5">
+                  <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                    <img class="p-1" src="images/client.png" alt="">
+                  </div>
+                  <div>
+                    <p class="text-gray-500 mb-5">
+                      We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h1 class="font-bold">Ilham Yuda</h1>
+                    <small class="font-bold text-gray-500">Businessman</small>
+                  </div>
+                </div>
+              </div>
+
+              <div class="relative left-8 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40">
+                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                  <img class="p-1" src="images/client.png" alt="">
+                </div>
+                <div>
+                  <p class="text-gray-500 mb-5">
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                  </p>
+                  <h1 class="font-bold">Ilham Yuda</h1>
+                  <small class="font-bold text-gray-500">Businessman</small>
+                </div>
+              </div>
+
+              
+
+                <div class="relative left-8 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5 opacity-40">
+                  <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                    <img class="p-1" src="images/client.png" alt="">
+                  </div>
+                  <div>
+                    <p class="text-gray-500 mb-5">
+                      We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h1 class="font-bold">Ilham Yuda</h1>
+                    <small class="font-bold text-gray-500">Businessman</small>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="mb-24">
+          <div class="text-center mb-8">
+            <h1 class="text-3xl md:text-4xl font-bold mb-2">News & Events</h1>
+            <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+           </div>
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-justify">
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden border-2">
+              <img class="mx-auto pt-4" src="images/news-1.png" alt="">
+              <div class="p-4 space-y-4">
+                <small class="text-[#777777]">Feb 05, 2027</small>
+                <h3 class="font-bold text-xl">Collecting 8 points for <br> discount</h3>
+                <p class="text-[#777777] pb-5">There are many variations of passages of Lorem Ipsum available.</p>
+                <a  class="font-bold">Learn More</a>
+              </div>
+            </div>
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden border-2">
+              <img class="mx-auto pt-4" src="images/news-2.png" alt="">
+              <div class="p-4 space-y-4">
+                <small class="text-[#777777]">Feb 05, 2027</small>
+                <h3 class="font-bold text-xl">Collecting 8 points for <br> discount</h3>
+                <p class="text-[#777777] pb-5">There are many variations of passages of Lorem Ipsum available.</p>
+                <a  class="font-bold">Learn More</a>
+              </div>
+            </div>
+            <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden border-2">
+              <img class="mx-auto pt-4" src="images/news-3.png" alt="">
+              <div class="p-4 space-y-4">
+                <small class="text-[#777777]">Feb 05, 2027</small>
+                <h3 class="font-bold text-xl">Collecting 8 points for <br> discount</h3>
+                <p class="text-[#777777] pb-5">There are many variations of passages of Lorem Ipsum available.</p>
+                <a  class="font-bold">Learn More</a>
+              </div>
+            </div>
+           </div>
+        </section>
     </main>
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+      <div class="w-9/12 mx-auto">
+        <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="images/cup.png" alt="">
+          <div class="flex items-center gap-2">
+            <h4>Ready to get started</h4>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold">Get Started</button>
+          </div>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">About Us</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">Privacy</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Our services</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">About Us</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">Privacy</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Help</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="">Help</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="">Contract Us</a>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Subscribe to our newsletter</h3>
+            <div class="flex flex-col space-y-2">
+              <div>
+                <input placeholder="Email Address" type="text" class="bg-transparent border-b-2 border-black w-4/6 ">
+                <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
+                <div class="flex justify-between w-2/5 mb-2 mt-8">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-square-instagram"></i>
+                  <i class="fa-brands fa-square-twitter"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center pt-4 mt-4">
+          <p class="text-sm text-gray-600">
+            © 2027 UIDesign.to - All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
