--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="w-5/6">
                 <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
                 <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
+                <button class="bg-white text-orange-700 px-3 py-2 rounded-lg font-bold">Show All</button>
               </div>  
             </div>
 
